# Oris

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  PRIVACY.md  README.md  RELEASE_v0.1.0.md  RELEASE_v0.1.1.md  RELEASE_v0.1.2.md  RELEASE_v0.1.3.md  RELEASE_v0.2.1.md  RELEASE_v0.2.10.md  RELEASE_v0.2.11.md  RELEASE_v0.2.12.md  RELEASE_v0.2.2.md  RELEASE_v0.2.3.md  RELEASE_v0.2.4.md  RELEASE_v0.2.5.md  RELEASE_v0.2.6.md  RELEASE_v0.2.7.md  RELEASE_v0.2.8.md  RELEASE_v0.2.9.md  SECURITY.md  SUPPORT.md  deny.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  custom.md  feature_request.md
.github/workflows/: ci.yml  rust.yml
crates/oris-agent-contract/: Cargo.toml
crates/oris-agent-contract/src/: lib.rs
crates/oris-economics/: Cargo.toml
crates/oris-economics/src/: lib.rs
crates/oris-evokernel/: Cargo.toml
crates/oris-evokernel/src/: lib.rs
crates/oris-evolution/: Cargo.toml
crates/oris-evolution-network/: Cargo.toml
crates/oris-evolution-network/src/: lib.rs
crates/oris-evolution/src/: lib.rs
crates/oris-execution-runtime/: Cargo.toml
crates/oris-execution-runtime/src/: api_contract.rs  api_idempotency.rs  api_models.rs  backend_config.rs  graph_bridge.rs  lease.rs  lib.rs  models.rs  observability.rs  postgres_runtime_repository.rs  recovery.rs  repository.rs  scheduler.rs  sqlite_runtime_repository.rs
crates/oris-execution-server/: Cargo.toml
crates/oris-execution-server/src/: lib.rs
crates/oris-governor/: Cargo.toml
crates/oris-governor/src/: lib.rs
crates/oris-kernel/: Cargo.toml
crates/oris-kernel/src/: lib.rs
crates/oris-kernel/src/kernel/: action.rs  determinism_guard.rs  driver.rs  event.rs  event_store.rs  execution_log.rs  execution_step.rs  execution_suspension.rs  identity.rs  interrupt.rs  interrupt_resolver.rs  kernel_mode.rs  mod.rs  policy.rs  replay_cursor.rs  replay_resume.rs  replay_verifier.rs  runner.rs  runtime_effect.rs  snapshot.rs  sqlite_store.rs  step.rs  timeline.rs
crates/oris-runtime/: Cargo.toml
crates/oris-runtime/examples/: advanced_tools.rs  agent.rs  cli_durable_job.rs  configurable_model.rs  context_engineering_complete.rs  context_engineering_dynamic_prompt.rs  context_engineering_dynamic_tools.rs  context_engineering_message_injection.rs  conversational_chain.rs  conversational_retriever_chain_with_vector_store.rs  conversational_retriever_simple_chain.rs  create_agent_simple.rs  custom_node_plugins.rs  deep_agent_basic.rs  deep_agent_customization.rs  deep_agent_filesystem.rs  deep_agent_human_in_the_loop.rs  deep_agent_long_term_memory.rs  deep_agent_planning.rs  deep_agent_skills.rs  deep_agent_with_task.rs  durable_agent_job.rs  durable_agent_job_sqlite.rs  dynamic_semantic_routes.rs  embedding_azure_open_ai.rs  embedding_fastembed.rs  embedding_mistralai.rs  embedding_ollama.rs  embedding_openai.rs  execution_server.rs  generate_runtime_api_contract.rs  git_commits.rs  graph_agent_workflow.rs  graph_hello_world.rs  graph_interrupts.rs  graph_interrupts_approval.rs  graph_interrupts_review.rs  graph_memory_basic.rs  graph_memory_store.rs  graph_parallel_execution.rs  (+77 more)
crates/oris-runtime/src/: agent_contract.rs  economics.rs  evolution.rs  evolution_network.rs  execution_runtime.rs  governor.rs  lib.rs  plugins.rs  spec_contract.rs
crates/oris-runtime/tests/: README.md  architecture.rs  runtime_compat.rs
crates/oris-sandbox/: Cargo.toml
crates/oris-sandbox/src/: lib.rs
crates/oris-spec/: Cargo.toml
crates/oris-spec/src/: lib.rs
docs/: ORIS_2.0_STRATEGY.md  durable-execution.md  evokernel-v0.1.md  incident-response-runbook.md  kernel-api.md  open-source-onboarding-zh.md  postgres-backup-restore-runbook.md  production-operations-guide.md  runtime-api-contract.json  runtime-benchmark-baseline.json  runtime-benchmark-policy.md  runtime-schema-migrations.md  rust-ecosystem-integration.md  scheduler-stress-baseline.md  supply-chain-policy.md
docs/evokernel/: README.md  agent.md  architecture.md  bootstrap.md  devloop.md  economics.md  evolution.md  founding-paper.md  governor.md  implementation-roadmap.md  kernel.md  network.md  spec.md  vision.md
docs/observability/: README.md  prometheus-alert-rules.yml  runtime-dashboard.json  sample-runtime-workload.prom
examples/: README.md  deep_agent_human_in_the_loop.rs  deep_agent_skills.rs  graph_agent_workflow.rs  graph_hello_world.rs  graph_interrupts.rs  graph_interrupts_approval.rs  graph_interrupts_review.rs  graph_memory_basic.rs  graph_memory_store.rs  graph_parallel_execution.rs  graph_persistence_basic.rs  graph_persistence_replay.rs  graph_persistence_sqlite.rs  graph_streaming.rs  graph_subgraph_shared_state.rs  graph_subgraph_streaming.rs  graph_task_example.rs  graph_time_travel.rs  graph_time_travel_fork.rs  rag_hybrid.rs
examples/evo_oris_repo/: Cargo.toml
examples/evo_oris_repo/src/: main.rs
examples/oris_operator_cli/: Cargo.toml  README.md
examples/oris_operator_cli/src/: main.rs
examples/oris_starter_axum/: Cargo.toml  README.md
examples/oris_starter_axum/src/: main.rs
examples/oris_worker_tokio/: Cargo.toml  README.md
examples/oris_worker_tokio/src/: main.rs
examples/templates/: README.md
examples/templates/axum_service/: Cargo.toml  Cargo.toml.tmpl  README.md
examples/templates/axum_service/src/: main.rs  main.rs.tmpl
examples/templates/operator_cli/: Cargo.toml  Cargo.toml.tmpl  README.md
examples/templates/worker_only/: Cargo.toml  Cargo.toml.tmpl  README.md
examples/vector_store_surrealdb/: Cargo.toml
examples/vector_store_surrealdb/src/: main.rs
scripts/: rehearse-postgres-backup-restore.sh  run_runtime_benchmark_suite.sh  run_scheduler_stress_suite.sh  run_supply_chain_checks.sh  scaffold_example_template.sh  update_runtime_api_contract.sh  verify_cargo_generate_templates.sh
skills/oris-maintainer/: SKILL.md
src/: lib.rs
src/agent/: mod.rs  utils.rs
src/agent/deep_agent/: skills.rs
src/graph/: compiled.rs  graph.rs  node.rs  state.rs
src/utils/: async_utils.rs
(+144 files in other folders)
