[package]
name = "oris-evokernel"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
publish = false
license = "MIT"
description = "Self-evolving kernel orchestration for Oris."

[dependencies]
async-trait = "0.1.80"
oris-agent-contract = { path = "../oris-agent-contract" }
oris-economics = { path = "../oris-economics" }
oris-evolution = { path = "../oris-evolution" }
oris-evolution-network = { path = "../oris-evolution-network" }
oris-governor = { path = "../oris-governor" }
oris-kernel = { path = "../oris-kernel" }
oris-sandbox = { path = "../oris-sandbox" }
oris-spec = { path = "../oris-spec" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.0"
tokio = { version = "1", features = ["full"] }
