[package]
name = "oris-governor"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
publish = false
license = "MIT"
description = "Promotion, cooldown, and revocation policies for Oris EvoKernel."

[dependencies]
oris-evolution = { path = "../oris-evolution" }
serde = { version = "1.0", features = ["derive"] }
